[metadata]
name = Sumatra
version = 0.8dev
author = "Sumatra authors and contributors"
author_email = "andrew.davison@unic.cnrs-gif.fr"
url = "http://neuralensemble.org/sumatra/"
license = "BSD 2 clause"
description = "A tool for automated tracking of computation-based scientific projects"
long_description = file: README.rst
long_description_content_type = text/rst
classifiers=
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering'

[options]
install_requires =
    httplib2
    docutils
    jinja2
    parameters

packages = find:

[options.packages.find]
where = .
include = sumatra*

[options.entry_points]
console_scripts =
    smt  = sumatra.bin.smt:smt_cli
    smtweb = sumatra.bin.smtweb:main

[options.package_data]
* =
    completion/*
    web/static/css/*.css
    web/static/js/*.js
    web/static/fonts/*
    web/templates/*html
    publishing/latex/sumatra.sty
    formatting/latex_template.tex
    external_scripts/script_introspect.R

[options.extras_require]
web =
    Django>=1.8
    django-tagging

svn =
    pysvn

hg =
    hgapi

git =
    GitPython

bzr =
    bzr

mpi =
    mpi4py

all =
    sumatra[web]
    sumatra[svn]
    sumatra[hg]
    sumatra[git]
    sumatra[bzr]
    sumatra[mpi]

dev =
    sarge
    numpy
    scipy
    matplotlib
    nose
    pillow
    coverage
    coveralls
    pytest
    pytest-xdist
    parameterized
    kaleido
    pre-commit


doc =
    pyNeuroML[all]
    sphinxcontrib-bibtex
    pydata-sphinx-theme

[flake8]
extend-ignore = E501, E502, F403, F405, W503, W504
